<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/rectangle_hint">

    <TextView
        android:id="@+id/title_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:text="@string/string_dialog_ass_title"
        android:textColor="@color/color_222030"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/content_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        android:text="@string/string_assignment_dialog_content"
        android:textColor="@color/color_A6222030"
        android:textSize="15sp"
        app:layout_constraintTop_toBottomOf="@+id/title_tv" />

    <TextView
        android:id="@+id/content_tv2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:text="@string/string_assignment_dialog_content2"
        android:textColor="@color/color_A6222030"
        android:textSize="15sp"
        app:layout_constraintTop_toBottomOf="@+id/content_tv" />

    <View
        android:id="@+id/lineOne"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginTop="24dp"
        android:background="@color/color_1A222030"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/content_tv2" />

    <com.ruffian.library.widget.RTextView
        android:id="@+id/cancelRtv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingTop="16dp"
        android:paddingBottom="16dp"
        android:text="@string/string_refuse"
        android:textColor="@color/color_222030"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/lineTwo"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toEndOf="@+id/lineOne"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lineOne" />

    <View
        android:id="@+id/lineTwo"
        android:layout_width="1dp"
        android:layout_height="0dp"
        android:background="@color/color_1A222030"
        app:layout_constraintBottom_toBottomOf="@+id/cancelRtv"
        app:layout_constraintEnd_toStartOf="@+id/sureRtv"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/cancelRtv"
        app:layout_constraintTop_toTopOf="@+id/cancelRtv" />

    <com.ruffian.library.widget.RTextView
        android:id="@+id/sureRtv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingTop="16dp"
        android:paddingBottom="16dp"
        android:text="@string/string_agree"
        android:textColor="@color/color_main"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/lineTwo"
        app:layout_constraintTop_toBottomOf="@+id/lineOne" />
</androidx.constraintlayout.widget.ConstraintLayout>